--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@graphql-codegen/typescript": "^2.5.1",
     "@graphql-codegen/typescript-operations": "^2.4.2",
     "@graphql-codegen/typescript-react-apollo": "^3.2.16",
+    "ethers": "^5.6.9",
     "graphql": "^16.5.0",
     "next": "12.1.6",
-    "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "wagmi": "^0.5.5"
   },
   "devDependencies": {
     "@types/node": "17.0.38",
