--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@graphql-codegen/typescript": "^2.5.1",
     "@graphql-codegen/typescript-operations": "^2.4.2",
     "@graphql-codegen/typescript-react-apollo": "^3.2.16",
+    "axios": "^0.27.2",
     "ethers": "^5.6.9",
     "graphql": "^16.5.0",
     "next": "12.1.6",
