--- a/package.json
+++ b/package.json
@@ -17,17 +17,22 @@
     "@graphql-codegen/typescript-operations": "^2.4.2",
     "@graphql-codegen/typescript-react-apollo": "^3.2.16",
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "ethers": "^5.6.9",
     "graphql": "^16.5.0",
     "next": "12.1.6",
     "react": "17.0.2",
+    "react-chartjs-2": "^4.2.0",
+    "react-chartlet": "^1.2.0",
     "react-dom": "17.0.2",
+    "react-helmet": "^6.1.0",
     "wagmi": "^0.5.5"
   },
   "devDependencies": {
     "@types/node": "17.0.38",
     "@types/react": "18.0.10",
     "@types/react-dom": "18.0.5",
+    "@types/react-helmet": "^6.1.5",
     "autoprefixer": "^10.4.7",
     "eslint": "8.16.0",
     "eslint-config-next": "12.1.6",
